# erp_next_mail_merge

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
mail_merge/: hooks.py  install.py  modules.txt  patches.txt
mail_merge/mail_merge/doctype/serienbrief_beispielobjekt/: serienbrief_beispielobjekt.json  serienbrief_beispielobjekt.py
mail_merge/mail_merge/doctype/serienbrief_beispielwert/: serienbrief_beispielwert.json  serienbrief_beispielwert.py
mail_merge/mail_merge/doctype/serienbrief_dokument/: serienbrief_dokument.json
mail_merge/mail_merge/doctype/serienbrief_durchlauf/: serienbrief_durchlauf.js  (+3 more)
mail_merge/mail_merge/utils/: footer.py  frappe_chrome_footer_patch.py  jinja_source_sanitizer.py  pdf_engine.py  placeholder_cache.py  serienbrief_fonts.py  serienbrief_placeholder_picker.py  serienbrief_quill_placeholders.py  serienbrief_render_check.py  test_brand_print.py  test_jinja_source_sanitizer.py  test_serienbrief_pdf_form.py
mail_merge/public/js/: serienbrief_durchlauf_dialog.js  serienbrief_placeholder_picker.js  serienbrief_quill_placeholders.js  serienbrief_vorlagen_browser.js
mail_merge/public/serienbrief_browser/: index.html
mail_merge/public/serienbrief_durchlauf/: index.html
mail_merge/public/serienbrief_editor/: index.html
mail_merge_frontend/: PARITAET_ALT_VS_NEU.md
mail_merge_frontend/src_react/: README.md  package-lock.json  package.json  vite.config.js
mail_merge_frontend/src_react/scripts/: copy-to-frappe.mjs
mail_merge_frontend/src_react/src/: App.jsx  api.js  bridge.js  data.js  persist.js  styles.css
(+56 files in other folders)
